--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-  height: 100vh;
-  background: orange;
-  color: white;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 1%;
 }
